--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -31,7 +31,7 @@ jobs:
           python-version: 3.9
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
-
+        run: pip install pylint &  pip install -r requirements.txt
+        
       - name: Run Pylint
         run: pylint app.py
